<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Flash Movies</string>
    <string name="read_more">Read More..</string>
    <string name="title">Title</string>
    <string name="tanggal_rilis">Release Dates</string>
    <string name="rating">Rating</string>
    <string name="genre">Genres</string>
    <string name="deskripsi">Description</string>
    <string name="negara">Countrys</string>
    <string name="perusahaan">Companys</string>
    <string name="keuntungan">Revenue</string>
    <string name="budget_awal">Budget</string>
    <string name="pemilik">Collection</string>
    <string name="hasil">Result :</string>
    <string name="Top_rating">Top Rated Movies</string>
    <string name="gagal_koneksi">Failed to load data!, Check your connection</string>
    <string name="tidak_diketahui">Unknown</string>
    <string name="now_playingFragment">Now Playing</string>
    <string name="upcomingFragment">Upcoming</string>
    <string name="searchFragment">Search Movies</string>
    <string name="judul_app">Catalogue Movies</string>
    <string name="up_detail">Detail</string>
    <string name="up_share">Share</string>
    <string name="poster_movie">Movie Poster</string>
    <string name="popular">Most Popular Movies</string>
    <string name="main_menu">Main Menu</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="communicate">Communicate</string>
    <string name="Page">Pages</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FlashMovie</string>
    <string name="nav_header_subtitle">naufalmahfudzismail@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="toast_nav_home">"You already at Home :v</string>
    <string name="toast_add_fav">Favorited</string>
    <string name="toast_remove_fav">Unfavorited</string>

    <!--FONT START-->
    <string name="fontReguler" translatable="false">fonts/Gotham_Light.otf</string>
    <string name="fontRegulerItalic" translatable="false">fonts/Gotham_LightItalic.otf</string>
    <string name="fontBold" translatable="false">fonts/Gotham_Book.otf</string>
    <string name="fontBoldItalic" translatable="false">fonts/Gotham_BookItalic.otf</string>
    <string name="fontBlack" translatable="false">fonts/Gotham_Medium.otf</string>
    <string name="fontBlackItalic" translatable="false">fonts/Gotham_MediumItalic.otf</string>
    <string name="fontExtraBold" translatable="false">fonts/GothamBlack.otf</string>
    <string name="fontThin" translatable="false">fonts/Gotham_Thin.otf</string>
    <!--FONT FINISH-->
    <string name="change_language_settings">Change Language Settings</string>
    <string name="share_description">Use FlashMovie to know more information abaout all movies around the world!</string>
    <string name="total_movie">Total :</string>
    <string name="search">Search</string>

    <string name="overload_number">99++</string>
    <string name="total_movies">Number of movies received:</string>
    <string name="region">Movies Region</string>
    <string name="indonesia_region">Indonesia</string>
    <string name="united_state_region">United State</string>
    <string name="japan_region">Japan</string>
    <string name="russia_region">Russia</string>
    <string name="german_region">German</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_widget_view_text">No Movies Added</string>
    <string name="widget_list">Your Favorite Movies List</string>
    <string name="msg_daily_reminder">Hi, movie apps are waiting for you!</string>
    <string name="title_activity_settings">Settings</string>

    <string name="action_notification">Notifications</string>
    <string name="key_reminder_daily">key_daily_reminder</string>
    <string name="label_daily_reminder_summary">Turn on/off daily reminder</string>
    <string name="label_daily_reminder_title">Daily Reminder</string>
    <string name="label_upcoming_reminder_title">Upcoming Reminder</string>
    <string name="key_reminder_upcoming">key_upcoming_reminder</string>
    <string name="label_upcoming_reminder_summary">Turn on/off upcoming reminder</string>
    <string name="key_setting_locale">key_setting_locale</string>
    <string name="label_setting_locale_summary">Setting Locale</string>
    <string name="label_setting_locale_title">Change your phone localization</string>
    <string name="action_settings">Settings</string>
    <string name="upcoming_reminder_msg" >Assalamualaikum, today %s is release  </string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
