<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item android:title="@string/Page"
        android:icon="@color/hitam">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home"
                    android:title="@string/main_menu" />
                <item
                    android:id="@+id/nav_fav"
                    android:icon="@drawable/ic_star_black_24dp"
                    android:title="@string/favorite" />
            </group>

        </menu>
    </item>

    <item android:title="@string/communicate"
        android:icon="@color/hitam">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
        </menu>
    </item>

</menu>
