<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="#fdeafffd"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/up_photo"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:contentDescription="@string/poster_movie"
            android:padding="5dp"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/up_photo"
            android:layout_toEndOf="@+id/up_photo">

        <fr.arnaudguyon.smartfontslib.FontButton

            android:id="@+id/up_detail"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:background="#9ac63d"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/up_detail"
            android:textColor="#00ffd9"
            android:textSize="12sp" />

        <fr.arnaudguyon.smartfontslib.FontButton
            android:id="@+id/up_share"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="#9ac63d"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/up_share"
            android:textColor="#00ffd9"
            android:textSize="12sp" />

        </LinearLayout>

        <fr.arnaudguyon.smartfontslib.FontTextView
            android:id="@+id/up_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/up_photo"
            android:layout_toRightOf="@id/up_photo"
            android:gravity="center"
            android:padding="5dp"
            android:text="hhh"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <fr.arnaudguyon.smartfontslib.FontTextView
            android:id="@+id/up_desc"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@+id/up_title"
            android:layout_toEndOf="@id/up_photo"
            android:layout_toRightOf="@id/up_photo"
            android:gravity="center"
            android:padding="5dp"
            android:text="hhh"
            android:textColor="#000000" />

        <fr.arnaudguyon.smartfontslib.FontTextView
            android:id="@+id/up_date"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/up_desc"
            android:layout_toEndOf="@id/up_photo"
            android:layout_toRightOf="@id/up_photo"
            android:gravity="center"
            android:padding="5dp"
            android:text="hhh"
            android:textColor="#000000" />


    </RelativeLayout>

</android.support.v7.widget.CardView>